--- a/Retail/templates/Retail/dashboard.html
+++ b/Retail/templates/Retail/dashboard.html
@@ -27,7 +27,7 @@
         </ul>
       </nav>
       <div class="p-6 border-t text-sm text-gray-500 flex justify-between items-center">
-        <a href="/accounts/logout/" class="text-red-500 hover:underline">Logout</a>
+        <a href="{% url 'authu:login' %}" class="text-red-500 hover:underline">Logout</a>
         <span>© 2025</span>
       </div>
     </aside>
@@ -49,7 +49,7 @@
         </div>
         <div class="flex items-center space-x-4">
           <button class="text-gray-600 hover:text-indigo-600"><i class="fa-solid fa-bell text-lg"></i></button>
-          <button class="text-gray-600 hover:text-indigo-600"><i class="fa-solid fa-gear text-lg"></i></button>
+          <button class="text-gray-600 hover:text-indigo-600"><i href="{% url 'authu:settings' %}" class="fa-solid fa-gear text-lg"></i></button>
           <span class="hidden sm:inline text-gray-600">Hi, <b>{{ request.user.username }}</b></span>
           <img src="https://ui-avatars.com/api/?name={{ request.user.username }}" class="w-10 h-10 rounded-full shadow" alt="User Avatar">
         </div>
