--- a/authu/templates/authu/signup.html
+++ b/authu/templates/authu/signup.html
@@ -21,7 +21,7 @@
             <input type="password" name="confirm_password" placeholder="Confirm Password" required>
             <button type="submit">Sign Up</button>
         </form>
-        <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
+        <p>Already have an account? <a href="{% url 'authu:login' %}">Login</a></p>
     </div>
 </body>
 </html>
