--- a/authu/templates/authu/login.html
+++ b/authu/templates/authu/login.html
@@ -110,7 +110,7 @@
       <input type="password" name="password" placeholder="Enter Password" required>
       <button type="submit">Login</button>
     </form>
-    <p>Don't have an account? <a href="{% url 'signup' %}">Sign Up</a></p>
+    <p>Don't have an account? <a href="{% url 'authu:signup' %}">Sign Up</a></p>
   </div>
 </body>
 </html>
