--- a/Inventory/templates/Inventory/dashboard.html
+++ b/Inventory/templates/Inventory/dashboard.html
@@ -151,7 +151,7 @@ tr:hover{background:#e7f0ff;}
     <a href="{% url 'Inventory:stock_history' %}"><i class="fa fa-history"></i> Stock History</a>
     <a href="{% url 'Product:product_list' %}"><i class="fa fa-box"></i> Products</a>
     <a href="{% url 'Product:barcode_generate' %}"><i class="fa fa-plus"></i> Add Product</a>
-    <a href="{% url 'logout' %}"><i class="fa fa-sign-out-alt"></i> Logout</a>
+    <a href="{% url 'authu:login' %}"><i class="fa fa-sign-out-alt"></i> Logout</a>
 </div>
 
 <!-- Mobile Menu Button -->
